2006-04-10 Mikhail Khodjaiants
	Bug 119740: allow to specify only a subset of shared objects that we want symbols to be loaded for.
	* MANIFEST.MF
	* GDBDebuggerPage.java
	* MIUIMessages.properties
	* SolibSearchPathBlock.java
	* StandardGDBDebuggerPage.java
	- IPathProvider.java
	* MIUIUtils.java

2006-03-31 Mikhail Khodjaiants
	Replaced internal org.eclipse.cdt.debug.internal.ui.SWTUtil class.
	+ SWTUtil.java
	* ListDialogField.java
	* SelectionButtonDialogField.java
	* StringButtonDialogField.java

2006-03-01 Mikhail Khodjaiants
	Select the first available command factory when a new launch configuration is created.
	* StandardGDBDebuggerPage.java

2006-02-08 Mikhail Khodjaiants
	Bug 114793: Add an extension point to contribute command factories.
	GDBServerDebuggerPage should extend StandardGDBDebuggerPage.
	* GDBServerDebuggerPage.java
	
2006-02-06 Mikhail Khodjaiants
	Bug 114793: Add an extension point to contribute command factories.
	* MIUIMessages.properties
	+ StandardGDBDebuggerPage.java
	* plugin.xml

2006-02-03 Mikhail Khodjaiants
	The "ICDebuggerPage" interface and "AbstractCDebuggerPage" class are added.
	All extensions of the "CDebuggerPage" extension point must implement "ICDebuggerPage".
	* GDBDebuggerPage.java

2005-12-27 Mikhail Khodjaiants
	Cleanup.
	* MIUIPlugin.java

2005-12-27 Mikhail Khodjaiants
	Bug 109526: Support Eclipse-LazyStart and deprecate Eclipse-AutoStart.
	* MANIFEST.MF

2005-12-20 Mikhail Khodjaiants
	Bug 120390: Avoiding .gdbinit
	* GDBDebuggerPage.java

2005-09-06 Mikhail Khodjaiants
	Cleanup: replaced "new Boolean" by the static Boolean objects (Java 1.4).
	* GDBSolibBlock.java

2005-09-06 Mikhail Khodjaiants
	Bug 108636: mi level selection option should be moved to the gdb page.
	* MIUIMessages.properties
	* GDBDebuggerPage.java

2005-09-02 Mikhail Khodjaiants
	Bug 108723: Create a separate tab for gdb server's conection options.
	* GDBDebuggerPage.java
	* GDBServerDebuggerPage.java
	* MIUIMessages.properties