@@ -1,3 +1,8 @@
+2006-04-11 Mikhail Khodjaiants
+	Bug 119740: allow to specify only a subset of shared objects that we want symbols to be loaded for.
+	Use soname instead of shared library name.
+	* SolibSearchPathBlock.java
+
 2006-04-10 Mikhail Khodjaiants
 	Bug 119740: allow to specify only a subset of shared objects that we want symbols to be loaded for.
 	* MANIFEST.MF
